2A/05_Projet_GL/src/test/deca/context/invalid/complet/93_redefMeth_boolean_int.deca
// Description :
//  une redefinition du methode du super super classe invalide 
// Resultats :
//    ligne 19 :  le boolean n'est pas un sous type du int
// Historique : 
//  cree le 16/01/2024

class A {
    boolean get() {

    }
}

class B extends A {

}

class C extends B {
    int get() {
        
    }
}